--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
-  db_postgres_drivenops:
+  postgres_drivenops:
     image: postgres
-    container_name: db_postgres_drivenops
+    container_name: postgres_drivenops
     restart: always
     ports:
       - 1122:5432
@@ -16,7 +16,7 @@ services:
     ports:
       - 5000:5000
     depends_on:
-      - db_postgres_drivenops
+      - postgres_drivenops
     env_file:
       - .env
 
@@ -25,6 +25,18 @@ services:
     build: ./front-end
     volumes:
       - build_react:/var/www/html
+
+  nginx_drivenops:
+    container_name: nginx_drivenops
+    build: ./nginx
+    ports:
+      - 8080:80
+    volumes:
+      - build_react:/var/www/html
+    depends_on:
+      - postgres_drivenops
+      - node_drivenops
+      - react_drivenops
 
 volumes:
   pg_drivenops:
