--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,11 +7,11 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api/ {
+    location /api {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
 
-        proxy_pass http://back-end:5000/;
+        proxy_pass http://postgresql://postgres:123@postgres_drivenops:5432/students:5000/;
     }
 }
