--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
 
-        proxy_pass http://postgresql://postgres:123@postgres_drivenops:5432/students:5000/;
+        proxy_pass http://node_drivenops:5000;
     }
 }
