--- a/.github/workflows/pullrequest.yaml
+++ b/.github/workflows/pullrequest.yaml
@@ -1,7 +1,7 @@
 name: PullRequest
 on: [pull_request]
 jobs:
-  PullRequest
+  PullRequest:
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
