--- a/.github/workflows/pullrequest.yaml
+++ b/.github/workflows/pullrequest.yaml
@@ -13,6 +13,7 @@ jobs:
           envkey_POSTGRES_USER: ${{secrets.POSTGRES_USER}}
           envkey_POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSSWORD}}
           envkey_POSTGRES_DB: ${{secrets.POSTGRES_DB_TEST}}
+          directory: back-end/
           file_name: .env.test
       - name: Run tests
         run: docker-compose -f docker-compose-test.yaml run node_drivenops npm run test
